Created object rerepsentations of item lists to isolate and name list opperations and added caching layer to local storage

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
             
             <div id="status-message" class="alert"></div>
 
-            <ul id="all-groups" class="list-group">
+            <div id="all-groups" class="list-group">
 
-            </ul>
+            </div>
+
+            <div class="mt-4 d-flex">
+                <button id="add-item" class="btn btn-success">Add Item</button>
+            </div>
 
             <div class="mt-4 d-flex">
                 <button id="next-group" class="btn btn-primary">Select Group</button>
