Updated list group styles to create a 3 column grid effect

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Test</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="app/style.css">
     </head>
     <body>
 
@@ -23,7 +24,7 @@
                 
                 <div class="col-md-9">
 
-                    <div id="all-groups" class="list-group">
+                    <div id="all-groups" class="list-group flex-wrap flex-row">
 
                     </div>
         
