Refactored all function constructors into classes. Rebuilt the render process to simplify managing state changes and updating the dom

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 
                 <div class="col-md-9">
 
-                    <div id="all-groups" class="list-group flex-wrap flex-row">
+                    <div id="list-items" class="list-group flex-wrap flex-row">
 
                     </div>
         
