Style updates for the disabled list

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div id="list-items">
                         <div id="list-enabled-items" class="list-group flex-wrap flex-row"></div>
 
-                        <div id="list-disabled-items" class="list-group flex-wrap flex-row mt-4"></div>
+                        <div id="list-disabled-items" class="list-group list-disabled flex-wrap flex-row mt-4"></div>
                     </div>
         
                     <div class="mt-4 d-flex">
