Added total count to status message

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <div class="container">
                 <div class="form-row">
                     <div class="col-auto">
-                        <select id="list-options" class="form-control"></select>
+                        <select id="list-options" class="form-control form-control-sm"></select>
                     </div>
                     <div class="col-auto">
-                        <button id="new-list" class="btn btn-success">Add New</button>
+                        <button id="new-list" class="btn btn-sm btn-success">Add New</button>
                     </div>
                 </div>
                 <hr>
