--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <hr>
                 <h1><span id="current-list-title"></span> Item Picker</h1>
-                <button class="btn btn-sm btn-secondary" id="edit-list">Edit</button> <button class="btn btn-sm btn-danger"  id="delete-list">Delete</button>
+                <button class="btn btn-sm btn-secondary" id="edit-list" data-list-action="editlist" data-toggle="modal" data-target="#edit-list-modal">Edit</button> <button class="btn btn-sm btn-danger"  id="delete-list">Delete</button>
             </div>
         </div>
 
@@ -63,8 +63,33 @@
             </div>
         </div>
 
+        <div class="modal fade" tabindex="-1" role="dialog" id="edit-list-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit <span id="modal-list-name"></span> List</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="list-name-input">List Name</label>
+                        <input type="email" class="form-control" id="list-name-input" name="name">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary"  data-modal-action="saveAndClose">Save changes</button>
+                </div>
+                </div>
+            </div>
+        </div>
+
         <script src="https://kit.fontawesome.com/aba951f796.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="app/list-picker.js"></script>
 
     </body>
