Adding 'previous' button feature

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -28,8 +28,9 @@
             <div id="status-message" class="alert"></div>
             <div class="mb-3 d-flex">
                 <button id="reset-list" class="btn btn-secondary">Reset</button>
-                <button id="disable-current-item" class="btn btn-outline-secondary ml-auto">Disable Current</button>
-                <button id="next-group" class="btn btn-success ml-1">Next</button>
+                <button id="disable-current-item" class="btn btn-outline-secondary ml-1">Disable Current</button>
+                <button id="prev-item" class="btn btn-outline-success ml-auto">Prev</button>
+                <button id="next-item" class="btn btn-success ml-1">Next</button>
             </div>
             <div class="row d-flex flex-column-reverse flex-md-row">
                 
